--- a/test.html
+++ b/test.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- tui -->
+    :q!
     <!-- 托管两步  -->
     <!-- 1暂存 -->
     git add ./test.html /(./)
